Restructured as a Tectonic project
Tectonic is now used as the default rendering engine, so I have
restructured the repository according to the Tectonic document
structure (https://tectonic-typesetting.github.io/book/latest/ref/documents.html).

- Source org files remain in the root directory
- Exported LaTeX files are written to src/
- Support LaTeX files (.sty, .cls, .bib, fonts) are also under src/
- Rendered outputs are written under build/
- Project configuration is in Tectonic.toml

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 zamboni-vita.tex
 zamboni-vita-private.*
 zamboni-resume.tex
+zamboni-resume-private.tex
+src/zamboni-vita.tex
+src/zamboni-vita-private.tex
+src/zamboni-resume.tex
+src/zamboni-resume-private.tex
+zamboni-resume-private.pdf
+build/zamboni-vita-private
 *.dvi
 *.log
 *.out
@@ -25,6 +32,4 @@ auto
 *.bcf
 *.run.xml
 .DS_Store
-zamboni-resume-private.pdf
-zamboni-resume-private.tex
 .auctex-auto
