Reenabled zamboni-resume output

--- a/Tectonic.toml
+++ b/Tectonic.toml
@@ -23,9 +23,9 @@ postamble = ''
 # preamble = ''
 # postamble = ''
 
-# [[output]]
-# name = 'zamboni-resume'
-# type = 'pdf'
-# index = 'zamboni-resume.tex'
-# preamble = ''
-# postamble = ''
+[[output]]
+name = 'zamboni-resume'
+type = 'pdf'
+index = 'zamboni-resume.tex'
+preamble = ''
+postamble = ''
